# Bugdevelop

./: Bugdevelop.md  CMakeLists.txt  Readme.md
Tests/: CMakeLists.txt  loger_Test.cpp  loger_Test.hpp
include/: Singleton.hpp  loger.hpp
src/: loger.cpp
